<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.MainFragment">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="22dp"
        app:cardCornerRadius="18sp"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/image_view"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:background="@drawable/heart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeColor="@color/grey"
                app:strokeWidth="3dp" />

            <TextView
                android:id="@+id/tv_love_calculator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="14dp"
                android:text="@string/calculator"
                android:textColor="@color/violet"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_view" />

            <TextView
                android:id="@+id/tv_first_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18sp"
                android:text="@string/fName"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/tv_love_calculator"
                app:layout_constraintTop_toBottomOf="@+id/tv_love_calculator" />


            <EditText
                android:id="@+id/et_you"
                android:layout_width="340dp"
                android:layout_height="50sp"
                android:layout_marginTop="12dp"
                android:background="@drawable/bc_edt"
                android:hint="@string/you"
                android:padding="16dp"
                android:textColorHint="@color/black"
                app:layout_constraintStart_toStartOf="@+id/tv_first_name"
                app:layout_constraintTop_toBottomOf="@+id/tv_first_name" />

            <TextView
                android:id="@+id/tv_second_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18sp"
                android:text="@string/sName"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/et_you"
                app:layout_constraintTop_toBottomOf="@+id/et_you" />


            <EditText
                android:id="@+id/et_me"
                android:layout_width="340dp"
                android:layout_height="50sp"
                android:layout_marginTop="12dp"
                android:background="@drawable/bc_edt"
                android:hint="@string/me"
                android:padding="16dp"
                android:textColorHint="@color/black"
                app:layout_constraintStart_toStartOf="@+id/tv_second_me"
                app:layout_constraintTop_toBottomOf="@+id/tv_second_me" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_request"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:layout_margin="18dp"
                android:backgroundTint="@color/violet"
                android:text="@string/calculate"
                android:textColor="@color/black"
                app:cornerRadius="15dp"
                app:layout_constraintEnd_toEndOf="@+id/et_me"
                app:layout_constraintStart_toStartOf="@+id/et_me"
                app:layout_constraintTop_toBottomOf="@+id/et_me" />

            <TextView
                android:id="@+id/tv_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="18dp"
                android:text="@string/home"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:drawableTopCompat="@drawable/heart_svg"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


            <TextView
                android:id="@+id/tv_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="18dp"
                android:text="@string/history"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:drawableTopCompat="@drawable/ic_baseline_history_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>

</FrameLayout>